# Cryptocurrency-Quantitative-Trading-System

./: .gitignore  README.md  config.example.json  config.live.example.json  config.optimized.json  pyproject.toml  tradesv3.dryrun.sqlite  tradesv3.dryrun.sqlite-shm  tradesv3.dryrun.sqlite-wal
crypto_scalper/: __init__.py  backtest.py  binance_client.py  cli.py  config.py  data.py  gui.py  indicators.py  live_config.py  live_trader.py  market_filters.py  models.py  risk.py  secrets.py  strategy.py
freqtrade_user_data/: README_FREQAI.md  README_NETWORK.md  config_freqai.example.json  config_hourly_momentum.example.json  config_regime.example.json  config_trend_opt.example.json
freqtrade_user_data/hyperopt_results/: .last_result.json
freqtrade_user_data/strategies/: BtcHourlyMomentumStrategy.py  BtcRegimeTrendStrategy.py  FreqaiMarketRegimeStrategy.py  RegimePullbackStrategy.py
tests/: test_backtest.py  test_live_config.py  test_market_filters.py
